part_1/1_0_7/log-output-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-app
  template:
    metadata:
      labels:
        app: log-output-app
    spec:
      containers:
      - name: log-output-app
        image: bronepeace/log-output-app:1.0.7
